Updated chat UI and fixed layout issues

--- a/style.css
+++ b/style.css
@@ -5,15 +5,15 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 body{
-     height: 100%;
-    margin: 0;
+    width: 100%;
+    height: 100vh;
     background-color: rgb(19, 67, 110);
     display: flex;
     flex-direction: column;
 }
 .chat-container{
     width: 100%;
-    height: 40rem;
+    height: 80%;
     background-color:rgb(19, 67, 110);
     /* rgb(19, 67, 110) */
     padding: 20px;
@@ -74,7 +74,7 @@ body{
     display: flex;
     gap: 10px;
     width: 100%;
-    height: 100%;
+    height: 20%;
 }
 .prompt-area input{
     background-color:rgba(0, 0, 0, 0.49);
